--- a/assets/sass/_admonition.scss
+++ b/assets/sass/_admonition.scss
@@ -1,42 +1,21 @@
-$colors: (
-  "success": #64dd17,
-  "question": #00c853,
-  "note": #448aff,
-  "info": #00b8d4,
-  "warning": #ff9100,
-  "hint": #009688,
-  "danger": #ff1744
-);
-
-$icons: (
-  "note": "\f249",
-  "danger": "\f06a",
-  "question": "\f128",
-  "hint": "\f06d",
-  "success": "\f00c",
-  "warning": "\f071",
-  "important": "\f12a"
-);
+@import "theme";
 
 @mixin admonition($color, $icon) {
   $dark: rgba($color, 0.1);
-  border-left: 0.2rem solid $color;
+  border-left-color: $color;
   > p.admonition-title {
     background-color: $dark;
-    font-size: 0.75rem;
+    border-bottom-color: $dark;
     &::before {
-      font-family: "Font Awesome 5 Free";
-      font-weight: 900;
-      margin-right: 0.4rem;
       content: $icon;
-      color: rgba($color, 1);
+      color: $color;
     }
   }
 }
 
 .admonition {
-  // Default color when admonition is used without type
-  $color: map-get($colors, "note");
+  // Default color when admonition is used with an unknown type
+  $color: $color-note;
   $dark: rgba($color, 0.1);
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12),
     0 3px 1px -2px rgba(0, 0, 0, 0.2);
@@ -44,15 +23,12 @@ $icons: (
   margin: 1.5em 0;
   padding: 0 0.6rem;
   border-left: 0.2rem solid $color;
-  border-left-color: $color;
   border-radius: 0.1rem;
   font-size: 0.8rem;
   overflow: auto;
-
   code {
     font-size: 0.75rem;
   }
-
   &-title {
     margin: 0 -0.6rem;
     padding: 0.4rem 0.6rem;
@@ -60,44 +36,39 @@ $icons: (
     background-color: $dark;
     font-weight: 700;
   }
-
+  > p.admonition-title {
+    font-size: 0.75rem;
+    &::before {
+      font-family: "Font Awesome 5 Free";
+      font-weight: 900;
+      margin-right: 0.4rem;
+    }
+  }
   &.note {
-    @include admonition(map-get($colors, "note"), map-get($icons, "note"));
+    @include admonition($color-note, $icon-note);
   }
   &.info {
-    @include admonition(map-get($colors, "info"), map-get($icons, "note"));
+    @include admonition($color-info, $icon-note);
   }
   &.question {
-    @include admonition(
-      map-get($colors, "question"),
-      map-get($icons, "question")
-    );
+    @include admonition($color-question, $icon-question);
   }
   &.hint,
   &.tip {
-    @include admonition(map-get($colors, "hint"), map-get($icons, "hint"));
+    @include admonition($color-hint, $icon-hint);
   }
   &.success {
-    @include admonition(
-      map-get($colors, "success"),
-      map-get($icons, "success")
-    );
+    @include admonition($color-success, $icon-success);
   }
   &.warning,
   &.caution {
-    @include admonition(
-      map-get($colors, "warning"),
-      map-get($icons, "warning")
-    );
+    @include admonition($color-warning, $icon-warning);
   }
   &.danger,
   &.error {
-    @include admonition(map-get($colors, "danger"), map-get($icons, "danger"));
+    @include admonition($color-danger, $icon-danger);
   }
   &.important {
-    @include admonition(
-      map-get($colors, "danger"),
-      map-get($icons, "important")
-    );
+    @include admonition($color-danger, $icon-important);
   }
 }
