Adding golangci conf

--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -5,6 +5,7 @@ $color-white: #fff;
 $color-post-theme: #1565c0;
 
 // Markdown colors
+$color-toc-link: grey;
 $color-link: #07a;
 $color-quote: #747d88;
 $color-quote-border: #d5d8db;
