--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -25,6 +25,7 @@ $color-info: #00b8d4;
 $color-warning: #ff9100;
 $color-hint: #009688;
 $color-danger: #ff1744;
+$color-code: #272822;
 
 // Icons
 $icon-note: "\f249";
@@ -34,3 +35,4 @@ $icon-hint: "\f06d";
 $icon-success: "\f00c";
 $icon-warning: "\f071";
 $icon-important: "\f12a";
+$icon-code: "\f121";
