--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -36,3 +36,6 @@ $icon-success: "\f00c";
 $icon-warning: "\f071";
 $icon-important: "\f12a";
 $icon-code: "\f121";
+$icon-chevron-down: "\f078";
+$icon-chevron-up: "\f077";
+$icon-plus: "\f0fe";
